--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 Copyright Cretu Mihnea Tudor 315CAa 2022 - 2023
+3rd Homework for Programming Languages Class, Year I - Faculty of Automation Control and Computer Science, Polytechnic University of Bucharest
 
                                 PPM and PGM Image Editor
 
